# ha-petkit-ble-bridge

./: .gitmodules  LICENSE  README.md  build  hacs.json  repository.yaml  run
.github/workflows/: builder.yaml
petkit-ble-bridge/: .addons.yaml  Dockerfile  README.md  build.yaml  config.yaml  pyproject.toml
petkit-ble-bridge/rootfs/etc/petkit-ble-bridge/: init  petkit-bridge.py  run
petkit-ble-bridge/rootfs/etc/services.d/petkit-ble-bridge/: run
petkit-ble-bridge/translations/: en.yaml
